use golangci instead of golint

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,6 @@
 name: "CI/CD"
 
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+on: [push, pull_request]
 
 jobs:
   build:
@@ -17,7 +13,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Install dependencies
-      run: go get -u golang.org/x/lint/golint
+      run: go get -u ./...
         
     - name: Build
       run: go build ./...
@@ -32,12 +28,15 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Install dependencies
-      run: go get -u golang.org/x/lint/golint
-        
+      run: go get -u ./...
+
+    - name: Install golangci-lint
+      run: curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b /usr/local/bin v1.46.2
+
     - name: Run vet & lint
       run: |
         go vet ./...
-        golint ./...
+        golangci-lint run
 
 
   test:
@@ -50,15 +49,10 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Install dependencies
-      run: |
-        go mod tidy
+      run: go get -u ./...
 
     - name: Run tests
-      run: go test  -coverprofile=c.out -covermode=atomic ./...
+      run: go test -race -coverprofile=coverage.out -covermode=atomic ./...
 
     - name: Upload coverage report
       uses: codecov/codecov-action@v1.0.2
-      with:
-        file: ./c.out
-        flags: unittests
-        name: codecov-umbrella
