--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,10 +14,10 @@ jobs:
 
     - name: Install dependencies
       run: go get -u ./...
-        
+
     - name: Build
       run: go build ./...
-      
+
   lint:
     runs-on: ubuntu-latest
     steps:
@@ -54,5 +54,5 @@ jobs:
     - name: Run tests
       run: go test -race -coverprofile=coverage.out -covermode=atomic ./...
 
-    - name: Upload coverage report
-      uses: codecov/codecov-action@v1.0.2
+    - name: Upload coverage to Codecov
+      run: bash <(curl -s https://codecov.io/bash)
