add terraform, resolve dependabot issue

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
-smplverse-metadata
+**/.terraform/*
+*.tfstate
+*.tfstate.*
+crash.log
+crash.*.log
+*.tfvars
+*.tfvars.json
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
+.terraformrc
+terraform.rcmplverse-metadata
 c.out
