update readme, move to prod

--- a/manifest.yaml
+++ b/manifest.yaml
@@ -1,13 +1,13 @@
 apiVersion: cert-manager.io/v1
 kind: Issuer
 metadata:
- name: letsencrypt
+ name: letsencrypt-prod
 spec:
  acme:
    server: https://acme-v02.api.letsencrypt.org/directory
    email: piotr.jp.ostrowski@gmail.com
    privateKeySecretRef:
-     name: letsencrypt
+     name: letsencrypt-prod
    solvers:
    - http01:
        ingress:
@@ -20,7 +20,7 @@ metadata:
   namespace: default
   annotations:
     ingress.kubernetes.io/ssl-redirect: "true"
-    cert-manager.io/issuer: letsencrypt
+    cert-manager.io/issuer: letsencrypt-prod
 spec:
   ingressClassName: nginx
   tls:
