--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,4 +63,7 @@ jobs:
         REDIS_PORT: 6379
 
     - name: Upload coverage to Codecov
-      run: bash <(curl -s https://codecov.io/bash)
+      run: |
+        curl -o upload.sh https://codecov.io/bash
+        chmod +x upload.sh
+        bash upload.sh
