--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "name": "name",
-  "description": "description",
+  "description": "SMPLverse NFTs use facial recognition to retrieve synthetic training data from the computational infrastructure of the metaverse.",
   "external_url": "external_url",
   "placeholder_image": "placeholder_image"
 }
