--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,7 +1,20 @@
 steps:
+
+# run tests
+- name: golang:1.18
+  entrypoint: /bin/bash
+  args: 
+    - -c
+    - |
+      go test ./...
+
+# build docker image
 - name: 'gcr.io/cloud-builders/docker'
   args: [ 'build', '-t', 'gcr.io/smplverse/metadata', '.' ]
+
+# push docker image
 - name: 'gcr.io/cloud-builders/docker'
   args: [ 'push', 'gcr.io/smplverse/metadata' ]
+
 images:
 - 'gcr.io/smplverse/metadata'
